--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-hello, world
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Timer</title>
+    <h1>Timer</h1>
+    <link rel="stylesheet" href="css/style.css">
+
+
+</head>
+<body>
+
+
+
+
+
+
+</body>
+</html>
